# ooey-station

./: .gitignore  CMakeLists.txt
docs/: 00-ooey-station-overview.md  01-project-setup-and-build-system.md  02-ooey-framework-extensions.md  03-virtual-display-and-rendering-pipeline.md  04-input-system-and-gamepad.md  05-boot-loader-and-game-browser.md  06-booey-virtual-machine-and-bytecode.md  07-booey-scripting-language-reference.md  08-booey-compiler-implementation.md  09-asset-system.md  10-game-development-guide.md  11-sonic-style-game-guide.md
games/hello-world/: game.booey  game.txt  main.booey
games/sonic-style/: game.booey  game.txt  main.booey
src/assets/: sound_gen.cpp  sound_gen.hpp  sprite_gen.cpp  sprite_gen.hpp  tilemap_gen.cpp  tilemap_gen.hpp
src/compiler/: ast.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
src/console/: audio.cpp  audio.hpp  display.cpp  display.hpp  input.cpp  input.hpp  memory.cpp  memory.hpp
src/station/: bootloader.cpp  bootloader.hpp  browser.cpp  browser.hpp  main.cpp
src/vm/: debug.cpp  debug.hpp  opcodes.hpp  vm.cpp  vm.hpp
tests/: CMakeLists.txt  compiler_tests.cpp  console_tests.cpp  vm_tests.cpp
